<resources>
    <string name="app_name">CommonLibrary</string>
    <string name="str_confirm">Confirm</string>
    <string name="sm_cancel">Cancel</string>
    <string name="str_delete">Delete</string>
    <string name="str_update">Update</string>
    <string name="str_version_update">Version Upgrade</string>
    <string name="str_new_version_update">New Version</string>
    <string name="str_ignore">Ignore</string>
    <string name="str_refresh">Refresh</string>
    <string name="str_complete">Complete</string>
    <string name="str_skip">Skip</string>
    <string name="str_continue">Continue</string>
    <string name="str_exit">Exit</string>
    <string name="str_return">Return</string>
    <string name="str_next">Next</string>
    <string name="str_close">Disable</string>
    <string name="str_setting">Settings</string>
    <string name="str_unknown">Unknown</string>
    <string name="str_gender_male">Male</string>
    <string name="str_gender_female">Female</string>
    <string name="str_common_age">Age</string>
    <string name="str_click_consent">By clicking the button of "Start Configuration", you agrMIe</string>
    <string name="sunmi_user_protocol">《SUNMI User Registration Agreement》</string>
    <string name="str_privacy">《Privacy Policy》</string>
    <string name="str_and"> and </string>
    <string name="network_disconnect">Network disconnected</string>
    <string name="toast_networkIsExceptional">Current network abnormal</string>
    <string name="toast_serverNoResponse">Please detect the network anomalies</string>
    <string name="network_connected">Network connected</string>
    <string name="server_noreponse">No response from the server</string>
    <string name="toast_network_error">Network exception, please check the network settings</string>
    <string name="network_error">Network error</string>
    <string name="network_error_tip">Please check your network and refresh</string>
    <string name="info_empty">No service message</string>
    <string name="tip_granted">Authoized</string>
    <string name="tip_permission_ungranted">Deny authorization may influence the use of some functions</string>
    <string name="permission_granted">The permission is granted from your mobile phon</string>
    <string name="str_new_version_now">Present new version</string>
    <string name="str_title_selected_pic">Select picture</string>
    <string name="str_ssl_error">SSL error</string>
    <string name="tip_agree_protocol">Please check the box to agree the User Protocol</string>
    <string name="toast_network_Exception">Network connection exception</string>
    <string name="network_wifi_low">Network connection failure</string>
    <string name="str_retry">Retry</string>
    <string name="tip_set_complete">Setup complete</string>
    <string name="tip_set_fail">Setup failed</string>
    <string name="choose_device_type">Choose the device</string>
    <string name="str_title_ap_set">Router management</string>
    <string name="str_title_ipc_set">IPC Configurating</string>
    <string name="str_title_printer_set">Setup printer</string>
    <string name="str_text_password_no_null">The password can not be null</string>
    <string name="str_config_tip_ap">Prepare to set up the router</string>
    <string name="str_config_tip_ap_1"><![CDATA[1. Connect the power supply and network cable to the router, then wait till the system indicator stop blinking.]]></string>
    <string name="str_config_tip_ap_2"><![CDATA[2. Connect your mobile phone to<font color= \'#FF6000\'>「SUNMI_XX」</font> Wi-Fi]]></string>
    <string name="str_config_tip_w1s_1"><![CDATA[1. 接通电源并连接网线，待信号灯呈<font color= \'#FF6000\'>「蓝色」</font>]]></string>
    <string name="str_config_tip_w1s_2"><![CDATA[2. 将手机连接到<font color= \'#FF6000\'>「SUNMI_XX」</font>无线网络]]></string>
    <string name="str_config_tip_ipc">Connect to the IP camera you need to setup</string>
    <string name="str_config_tip_ipc_1"><![CDATA[Power on the IPC and wait for 20s to see the <b><font color= \'#FF6000\'>「green indicator blinks」</font></b>，and then click「NEXT」]]></string>
    <string name="str_config_tip_ipc_2">Plug in the network cable to the IPC and connect your phone to the same network.\n Click「NEXT」</string>
    <string name="str_config_tip_ipc_3"><![CDATA[Please connect your phone to the wireless network of the IPC <b><font color= \'#FF6000\'>「SUNMI_XXXX」</font></b>(can be found on the router or the package),and click 「NEXT」]]></string>
    <string name="str_config_tip_ipc_4"><![CDATA[After the<b><font color= \'#FF6000\'>「blue indicator」</font></b>of the IPC is on,Click「NEXT」]]></string>
    <string name="str_config_tip_printer">Connect the printer you wish to setup</string>
    <string name="str_config_tip_printer_1">1. Turn the cloud printer on and press and hold the pairing button for 3 seconds.When you hear the tone, release the pairing button.</string>
    <string name="str_config_tip_printer_2">2. When you hear the tone, release the pairing button.</string>
    <string name="str_config_tip_printer_3">2. Press the "Start" button and select Cloud Printer.（Please make sure the phone Bluetooth is turned on; and ensure that the app location authorization is turned on）</string>
    <string name="str_config_tip_fs_1">1.Please insert the TF memory card to use passenger flow statistics</string>
    <string name="str_config_tip_fs_2"><![CDATA[2. Power on the IP camera, wait till the indicator is <font color= \'#FF6000\'>「white」</font>]]></string>
    <string name="str_config_tip_fs_3">3.If using a wired network connection, insert the cable and connect the phone to the same network.</string>
    <string name="str_config_tip_fs_4"><![CDATA[4. If you want to use the wireless，please connect to the 「SUNMI_XXXX」 Wi-Fi in the label of router <font color= \'#FF6000\'>「SUNMI_XXXX」</font>]]></string>
    <string name="tip_has_ap_already">Is there a connected Sunmi router already？</string>
    <string name="str_start_set">Start</string>
    <string name="str_config_child_tip">If you already had a connected Sunmi router, you could add more routers in「Router Management」</string>
    <string name="btn_start_config">Start configuration</string>
    <string name="textView_config_title">Setup wizard</string>
    <string name="str_primary_search_check_line">Please check whether the router has been powered on with the network cable connected</string>
    <string name="str_primary_search_on_find">No router found</string>
    <string name="str_primary_search_searching_ap">Searching your router</string>
    <string name="str_primary_search_searching_ipc">Searching your IP camera</string>
    <string name="str_loading">Loading…</string>
    <string name="str_add_success">Add successfully</string>
    <string name="str_add_fail">Add failed</string>
    <string name="str_bind_net_error">Please make sure that your mobile phone is connected to the internet</string>
    <string name="str_searching">Searching…</string>
    <string name="tip_no_device_found">No device found</string>
    <string name="str_check_net">Please check the status of network</string>
    <string name="str_net_exception">Network connection exception, please check and try again</string>
    <string name="str_server_exception">Server connection exception, please check and try again</string>
    <string name="str_btn_try_again">Click to try again</string>
    <string name="tip_forbid_by_server">The request has been denied by server</string>
    <string name="str_bind_success">Bind success</string>
    <string name="str_bind_fail">Bind fail</string>
    <string name="str_dev_binded">This device was bound by other user already</string>
    <string name="str_prompt">Turn on Bluetooth</string>
    <string name="str_tip_start_blue">Bluetooth is not currently enabled. Do you want to jump to the Bluetooth settings page?</string>
    <string name="str_delete_success">Delete successfully</string>
    <string name="str_delete_fail">Delete failed</string>
    <string name="tip_play_fail">Playback failed</string>
    <string name="company_shop_new_create_or_import">You can create a new store or import from other software platforms</string>
    <string name="company_shop_new_create">Create store</string>
    <string name="company_shop_import">Import store</string>
    <string name="update_app_exception">Update failed. Please check the network connection.</string>
    <string name="str_loding_more">Loading</string>
    <string name="tip_no_more_data">No more data</string>
    <string name="str_pick_photo">Select photos</string>
    <string name="picker_toast_no_permission">Permission denied!</string>
    <string name="picker_toast_no_camera">No camera app installed.</string>
    <string name="picker_toast_create_dir_error">Create directory FAILED!</string>
    <string name="picker_toast_path_error">Path is exist and is NOT a directory!</string>
    <string name="picker_toast_limit">Selected images are out of limit.</string>
    <string name="notice_unread_message">%d unread messages</string>
    <string name="ipc_setting_detection_day_monday">Mon</string>
    <string name="ipc_setting_detection_day_tuesday">Tues</string>
    <string name="ipc_setting_detection_day_wednesday">Wed</string>
    <string name="ipc_setting_detection_day_thursday">Thurs</string>
    <string name="ipc_setting_detection_day_friday">Fri</string>
    <string name="ipc_setting_detection_day_saturday">Sat</string>
    <string name="ipc_setting_detection_day_sunday">Sun</string>
    <string name="sunmi_device_w1">W1 Router</string>
    <string name="sunmi_device_w1s">W1s Router</string>
    <string name="sunmi_device_printer">Cloud Printer</string>
    <string name="sunmi_device_fs">Face Sense Camera</string>
    <string name="sunmi_device_ss">Store Sense Camera</string>
    <string name="sunmi_device_more">Coming soon</string>
    <string name="str_setting_detail">View</string>
    <string name="str_comment_name">修改名称</string>
    <string name="str_coming_soon">Coming Soon</string>
    <string name="str_num_10_thousands">%.2f万</string>
    <string name="str_num_100_million">%.2f亿</string>
    <string name="str_num_people">%d Customers</string>
    <string name="str_num_10_thousands_people">%s万人</string>
    <string name="str_num_people_total">Total people</string>
    <string name="str_cancel_setting">Are you sure to cancel the setting?</string>
    <string name="str_sunmi_link">SUNMI Link</string>
    <string name="str_tab_support">Service</string>
    <string name="str_support_manage">Service management</string>
    <string name="str_cloud_manage">Cloud storage management</string>
    <string name="str_remaining_validity_period">Remaining Validity:%s</string>
    <string name="tip_validity_period">剩余有效期：%s\n请至服务管理进行续费</string>
    <string name="ipc_device_name">Device Name：%s</string>
    <string name="str_dev_sn">SN：%s</string>
    <string name="str_dev_mac">MAC：%s</string>
    <string name="cash_video">Checkout Video</string>
    <string name="str_no_cash_video">No video</string>
    <string name="str_open_cloud_storage">Subscribe cloud storage</string>
    <string name="tip_after_cloud_cash_video">Please subscribe to the cloud storage service to view the cash register video</string>
    <string name="str_device_offline_desc">Offline help</string>
    <string name="tip_device_offline_check">When your device is offline, please check:</string>
    <string name="tip_device_offline_check_content">1、Whether the device is started\n2、Whether the device is dormant\n3、Whether the network to which the device is connected is available</string>
    <string name="tip_device_offline_management">When your device is offline, offline management operation：</string>
    <string name="tip_device_offline_management_content">1、If the phone and the device are on the same LAN, it can manage most functions of the offline device\n\n2、If the phone and device are in different LAN, only part of the offline device can be managed</string>
</resources>