<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <sunmi.common.view.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c_white"
        app:dividerShow="true"
        app:leftDefaultClickEnable="true"
        app:leftIcon="@drawable/ic_back_dark"
        app:titleText="@string/str_device_offline_desc"
        app:titleTextColor="@color/text_main" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/tip_device_offline_check"
        android:textColor="@color/text_main"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/tip_device_offline_check_content"
        android:textColor="@color/text_main"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_32"
        android:text="@string/tip_device_offline_management"
        android:textColor="@color/text_main"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/tip_device_offline_management_content"
        android:textColor="@color/text_main"
        android:textSize="@dimen/sp_14" />

</LinearLayout>