<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_shap_top_radus_left_right"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_25"
        android:text="@string/company_shop_new_create_or_import"
        android:textColor="@color/text_main"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_create_shop"
        style="@style/BtnBigOrange"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/company_shop_new_create" />

    <Button
        android:id="@+id/btn_shop_import"
        style="@style/BtnBigWhite"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_32"
        android:text="@string/company_shop_import" />

</LinearLayout>